scrollbar fix

--- a/style.css
+++ b/style.css
@@ -1,19 +1,99 @@
-.cardlist {
-    width: 100%;
-    overflow: scroll;
-    overflow-y: hidden;
-    padding: 30px;
-    position: relative;     
+@font-face {
+    font-family: logofont;
+    src: url('fonts/josefinslab.ttf')
 }
 
-.cardlist::-webkit-scrollbar {
-    display: none;
+body {
+    background-image: url('/retroflix/images/jaw.jpeg');
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+#logo {
+    color: rgb(252, 186, 3);
+    display: inline;
+    vertical-align: top;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    margin-top: 60px;
+    font-family: logofont;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 10px;
+}
+
+#logo > a {
+    color: rgb(252, 186, 3);
+    display: inline;
+    vertical-align: top;
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+    margin-top: 30px;
+    font-family: logofont;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 10px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.a:link {
+    text-decoration: none;
+}
+
+.a:visited {
+    text-decoration: none;
+}
+
+.a:hover, a:active {
+    color: rgb(252, 186, 3);
+    text-decoration: none;
+    font-weight: 900;
+}
+
+.cardlist {
+    position: relative; 
+    width: 100%;
+    padding: 30px;
+     
+}
+
+/* .cardlist::-webkit-scrollbar {
+    display: hidden;
+}  */
 
 .cardlistcontainer {
     white-space: nowrap;
     margin: 40px 0px;
-    padding-bottom: 10px;
+    padding-bottom: 10px;     
+    overflow-y: hidden;   
+}
+
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 6px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.3); 
+    border-radius: 6px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 50px rgb(162, 181, 199); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+   -webkit-box-shadow: inset 0 0 50px rgb(75, 87, 99);
 }
 
 .cardlist-item {
